# 2014_2015_robotics_ssm

./: README.md
controllers/lines_detector/: CMakeLists.txt  CMakeLists.txt~  MyRobot.cpp  MyRobot.h  lines_detector.cpp
controllers/obstacle_avoidance/: CMakeLists.txt  MyRobot.cpp  MyRobot.h  obstacle_avoidance.cpp
controllers/obstacle_odometry/: CMakeLists.txt  MyRobot.cpp  MyRobot.h
controllers/sensors/: MyRobot.cpp  MyRobot.cpp~  MyRobot.h  MyRobot.h~  sensors.cpp
controllers/straight_compass/: Makefile  MyRobot.cpp  MyRobot.cpp~  MyRobot.h  MyRobot.h~  straight_compass.cpp
controllers/straight_odometry/: CMakeLists.txt  CMakeLists.txt~  MyRobot.cpp  MyRobot.h  straight_odometry.cpp
controllers/wall_detector/: MyRobot.cpp  MyRobot.h  wall_detector.cpp
controllers/wall_follower/: CMakeLists.txt  CMakeLists.txt~  MyRobot.cpp  MyRobot.cpp~  MyRobot.h  MyRobot.h~  wall_follower.cpp
webots/worlds/: scenario_odometry.wbt
worlds/: .scenario00.wbproj  scenario00.wbt  scenario01.wbt  scenario_odometry.wbt
